Implementation of registration of new address.
