# src/main/java/com/dowglasmaia/address/api/controller/AddressController.java
@@ -1,10 +1,14 @@
 package com.dowglasmaia.address.api.controller;
 
-import br.com.dowglasmaia.openapi.api.AddressApi;
+import br.com.dowglasmaia.openapi.api.AddressesApi;
+import br.com.dowglasmaia.openapi.model.AddressIdResponse;
 import br.com.dowglasmaia.openapi.model.AddressRequest;
 import br.com.dowglasmaia.openapi.model.AddressResponse;
+import com.dowglasmaia.address.api.service.AddressService;
 import lombok.extern.log4j.Log4j2;
 import org.apache.commons.lang3.NotImplementedException;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -13,16 +17,24 @@ import reactor.core.publisher.Mono;
 
 @Log4j2
 @RestController
-@RequestMapping(value = "/api/v1/adresses")
-public class AddressController implements AddressApi {
+@RequestMapping(value = "/api/v1")
+public class AddressController implements AddressesApi {
+    @Autowired
+    private AddressService service;
     @Override
-    public Mono<ResponseEntity<AddressResponse>> createAddress(
+    public Mono<ResponseEntity<AddressIdResponse>> createAddress(
             String clientId,
             Mono<AddressRequest> addressRequest,
             ServerWebExchange exchange) {
         log.info("Start endpoint createAddress");
 
-        throw new NotImplementedException();
+        return addressRequest
+                .log()
+                .flatMap(request -> {
+                    log.info("Body Request: {}", addressRequest);
+                    return service.insert(request)
+                            .map(response -> ResponseEntity.status(HttpStatus.CREATED).body(response));
+                });
     }
 
     @Override
