# src/main/resources/swagger/MS-Address-API.yaml
@@ -10,7 +10,7 @@ tags:
   - name: Client
     description: Operations related to client addresses
 paths:
-  /address/findByClientById:
+  /addresses/findByClientById:
     get:
       tags:
         - Client
@@ -37,7 +37,7 @@ paths:
           description: Internal server error
         '503':
           description: Service unavailable
-  /address:
+  /addresses:
     post:
       tags:
         - Client
@@ -64,7 +64,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/AddressResponse'
+                $ref: '#/components/schemas/AddressIdResponse'
         '400':
           description: Invalid request body or parameters
         '500':
@@ -123,3 +123,11 @@ components:
           type: string
           description: ZIP code
           example: '94301'
+
+    AddressIdResponse:
+      type: object
+      properties:
+        id:
+          type: string
+          description: Unique identifier for the address
+          example: abc123
